--- a/vetapp/templates/vetapp/startpage.html
+++ b/vetapp/templates/vetapp/startpage.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-lg-3 mt-5 pt-5">
         <div class="pl-5 ml-3 card-title"><h5>Register New</h5></div>
-            <a target="_self" href="{% url 'new-patient' %}" class="imgButton one">
+            <a target="_self" href="{% url 'new-card' %}" class="imgButton one">
             <img src="{% static 'img/registernew.jpg' %}" class="rounded-circle" alt="Register New" width="200" height="200" alt="RegNew Photo"></a>
       </div>
       <div class="col-lg-3 mt-5 pt-5">
